RESOLVED FIXED28803
[v8] Callbacks do not report exceptions that they throw.
https://bugs.webkit.org/show_bug.cgi?id=28803
Summary [v8] Callbacks do not report exceptions that they throw.
Ben Murdoch
Reported 2009-08-28 05:58:07 PDT
In V8CustomVoidCallback if the callback throws an exception, that exception is not reported to WebCore.
Attachments
Proposed patch (1.95 KB, patch)
2009-08-28 09:41 PDT, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2009-08-28 09:41:34 PDT
Created attachment 38741 [details] Proposed patch
Dimitri Glazkov (Google)
Comment 2 2009-08-28 11:30:48 PDT
Comment on attachment 38741 [details] Proposed patch r-me.
Eric Seidel (no email)
Comment 3 2009-08-28 11:40:18 PDT
Comment on attachment 38741 [details] Proposed patch Clearing flags on attachment: 38741 Committed r47871: <http://trac.webkit.org/changeset/47871>
Eric Seidel (no email)
Comment 4 2009-08-28 11:40:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.