2009-08-28  Ben Murdoch  <benm@google.com>

https://bugs.webkit.org/show_bug.cgi?id=28803

        Implements V8CustomVoidCallback reporting any exceptions that were thrown from the callback function.

        * bindings/v8/custom/V8CustomVoidCallback.cpp:
        (WebCore::invokeCallback): Checks if the callback raised an exception and reports it to WebCore if so.


Canonical link: https://commits.webkit.org/39447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47871 268f45cc-cd09-0410-ab3c-d52691b4dbfc